adding debug logic back in

--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="IndexBuffer.h" />
+    <ClInclude Include="OpenGLDebug.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShapeData.h" />
     <ClInclude Include="ShapeGenerator.h" />
