fixing release post build step

--- a/TrackEditor/TrackEditor.vcxproj
+++ b/TrackEditor/TrackEditor.vcxproj
@@ -143,10 +143,10 @@ echo f | xcopy ..\external\TrackEditor_LicensedLibs.txt .\$(OutDir)LicensedLibs.
 if %errorlevel% NEQ 0 goto Failed
 
 echo Copying Shaders...
-echo f | xcopy .\FragmentShaderCode.glsl .\$(OutDir) /R /Y /d /i &gt; null
-echo f | xcopy .\VertexShaderCode.glsl .\$(OutDir) /R /Y /d /i &gt; null
-echo f | xcopy .\FragmentShaderPassThroughCode.glsl .\$(OutDir) /R /Y /d /i &gt; null
-echo f | xcopy .\VertexShaderPassThroughCode.glsl .\$(OutDir) /R /Y /d /i &gt; null
+echo f | xcopy ..\Utils\Shaders\FragmentShaderCode.glsl .\$(OutDir)Shaders\ /R /Y /d /i &gt; null
+echo f | xcopy ..\Utils\Shaders\VertexShaderCode.glsl .\$(OutDir)Shaders\ /R /Y /d /i &gt; null
+echo f | xcopy ..\Utils\Shaders\FragmentShaderPassThroughCode.glsl .\$(OutDir)Shaders\ /R /Y /d /i &gt; null
+echo f | xcopy ..\Utils\Shaders\VertexShaderPassThroughCode.glsl .\$(OutDir)Shaders\ /R /Y /d /i &gt; null
 if %errorlevel% NEQ 0 goto Failed
 
 echo Post-Build Step for $(ProjectName) completed successfully
