ShapeData is now a class and handles its own draw call

--- a/Utils/Utils.vcxproj.filters
+++ b/Utils/Utils.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClCompile Include="TrackData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ShapeData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\FragmentShaderCode.glsl">
