adding display settings dock widget

--- a/TrackEditor/TrackEditor.vcxproj.filters
+++ b/TrackEditor/TrackEditor.vcxproj.filters
@@ -76,6 +76,12 @@
     <ClCompile Include="QtHelpers.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="DisplaySettings.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="moc\moc_DisplaySettings.cpp">
+      <Filter>Qt Generated Files\Moc Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Track.h">
@@ -119,6 +125,9 @@
     </ClInclude>
     <ClInclude Include="QtHelpers.h">
       <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\ui_DisplaySettings.h">
+      <Filter>Qt Generated Files\Ui Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -171,6 +180,12 @@
       <Filter>Resources</Filter>
     </CustomBuild>
     <CustomBuild Include="GlobalTrackSettings.h">
+      <Filter>Headers</Filter>
+    </CustomBuild>
+    <CustomBuild Include="DisplaySettings.ui">
+      <Filter>Resources</Filter>
+    </CustomBuild>
+    <CustomBuild Include="DisplaySettings.h">
       <Filter>Headers</Filter>
     </CustomBuild>
   </ItemGroup>
