moving palette loading to utils and stripping Qt dependency from it

--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="OpenGLDebug.h" />
+    <ClInclude Include="Palette.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShapeData.h" />
     <ClInclude Include="ShapeGenerator.h" />
@@ -119,6 +120,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
+    <ClCompile Include="Palette.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShapeData.cpp" />
     <ClCompile Include="ShapeGenerator.cpp" />
